# linux-on-windows

./: .gitignore  README.md
.github/workflows/: release.yml
base64/: Cargo.toml
base64/src/: main.rs
bzip2/: Cargo.toml
bzip2/src/: main.rs
cat/: Cargo.toml
cat/src/: main.rs
cp/: Cargo.toml
cp/src/: main.rs
cut/: Cargo.toml
cut/src/: main.rs
diff/: Cargo.toml
diff/src/: main.rs
dig/: Cargo.toml
dig/src/: main.rs
echo/: Cargo.toml
echo/src/: main.rs
file/: Cargo.toml
file/src/: main.rs
free/: Cargo.toml
free/src/: main.rs
grep/: Cargo.toml
grep/src/: main.rs
gzip/: Cargo.toml
gzip/src/: main.rs
head/: Cargo.toml
head/src/: main.rs
htop/: Cargo.toml
htop/src/: main.rs
icat/: Cargo.toml
icat/src/: main.rs
iotop/: Cargo.toml
iotop/src/: main.rs
iptop/: Cargo.toml
iptop/src/: main.rs
kill/: Cargo.toml
kill/src/: main.rs
locate/: Cargo.toml
locate/src/: main.rs
ls/: Cargo.toml
ls/src/: main.rs
lsof/: Cargo.toml
lsof/src/: main.rs
mv/: Cargo.toml
mv/src/: main.rs
nano/: Cargo.toml
nano/src/: main.rs
neofetch/: Cargo.toml
neofetch/src/: main.rs
pgrep/: Cargo.toml
pgrep/src/: main.rs
ps/: Cargo.toml
ps/src/: main.rs
rm/: Cargo.toml
rm/src/: main.rs
sfind/: Cargo.toml
sfind/src/: main.rs
sort/: Cargo.toml
sort/src/: main.rs
ss/: Cargo.toml
ss/src/: main.rs
stat/: Cargo.toml
stat/src/: main.rs
tac/: Cargo.toml
tac/src/: main.rs
tail/: Cargo.toml
tail/src/: main.rs
tcpdump/: Cargo.toml
tcpdump/src/: main.rs
top/: Cargo.toml
top/src/: main.rs
touch/: Cargo.toml
touch/src/: main.rs
tr/: Cargo.toml
tr/src/: main.rs
uniq/: Cargo.toml
uniq/src/: main.rs
unzip/: Cargo.toml
unzip/src/: main.rs
watch/: Cargo.toml
watch/src/: main.rs
watchexec/: Cargo.toml
watchexec/crates/cli/src/: args.rs
watchexec/crates/cli/src/args/: command.rs  events.rs  filtering.rs
wc/: Cargo.toml
wc/src/: main.rs
zip/: Cargo.toml
zip/src/: main.rs
