[package]
name = "grep"
version = "1.0.0"
edition = "2021"
description = "Search files for lines matching a pattern"

[[bin]]
name = "grep"
path = "src/main.rs"

[dependencies]
clap     = { version = "4", features = ["derive"] }
colored  = "2"
regex    = "1"
walkdir  = "2"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
