[package]
name = "iptop"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "iptop"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
