[package]
name = "mv"
version = "1.0.0"
edition = "2021"
description = "Move or rename files and directories"

[[bin]]
name = "mv"
path = "src/main.rs"

[dependencies]
clap     = { version = "4", features = ["derive"] }
colored  = "2"
walkdir  = "2"
filetime = "0.2"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
