[package]
name = "pgrep"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "pgrep"
path = "src/main.rs"

[[bin]]
name = "pkill"
path = "src/main.rs"

[dependencies]
colored = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
