[package]
name = "ps"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ps"
path = "src/main.rs"

[dependencies]
colored = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
