[package]
name = "rm"
version = "1.0.0"
edition = "2021"
description = "Remove files and directories"

[[bin]]
name = "rm"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
colored = "2"
walkdir = "2"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
