[package]
name = "sfind"
version = "1.0.0"
edition = "2021"
description = "Find files in a directory hierarchy - Windows port of GNU find"

[[bin]]
name = "sfind"
path = "src/main.rs"

[dependencies]
flate2 = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
